Fix alignment in context menu for long usernames

--- a/app/assets/stylesheets/deep-insights/themes/scss/map/_dashboard-info.scss
+++ b/app/assets/stylesheets/deep-insights/themes/scss/map/_dashboard-info.scss
@@ -336,6 +336,7 @@
     width: 100%;
     opacity: 1;
     font-size: 10px;
+    line-height: 1;
   }
 
   .CDB-Dashboard-menuAvatar img {
